# PythonSailocus

./: .gitignore  README.md  main.py  main_fastapi.py  main_flask.py  main_minimal.py  main_web.py  pyproject.toml  requirements.txt  simple.py
sailocus/apis/: base.py
sailocus/apis/v1/: route_coe.py  route_sailocus.py
sailocus/geometry/: __init__.py  line.py  linesegment.py  point.py  triangle.py
sailocus/sail/: center_of_effort.py  sail.py  sails.py
sailocus/server/: server.py
sailocus/server_flask/: server.py
sailocus/svg/: __init__.py  svg.py
scripts/: makeDevCerts.sh  post_request_create_svg.sh  post_request_create_svg_fastapi.sh  post_request_create_svg_fastapi_HTTPS.sh  post_request_token_HTTPS.sh
tests/geometry/: test_line.py  test_linesegment.py  test_point.py  test_triangle.py
tests/sail/: test_sail.py
web/apis/: base.py
web/apis/v1/: route_token.py
web/db/: connection.py  password.py  sail.py  user.py
web/routers/: base.py  route_sailocus.py
web/server_flask/: server.py
web/templates/: index.html  sailocus.html  sailocus_fastapi.html
