[project]
name = "sailocus"
# ... other metadata

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
[pytest]
python_paths = ["."]  # ensures 'sailocus' is importable
testpaths = ["tests"]


[ tool.mypy ]
[[ tool.mypy.overrides ]]
module = "svgwrite.*"
ignore_missing_imports = true   # old style, still works
# or the newer, more precise way:
follow_imports = "skip"         # optional, if you also want to skip checking inside svgwrite